@@ -1,3 +1,9 @@
+2014-09-05  Jason Merrill  <jason@redhat.com>
+
+	PR c++/62659
+	* semantics.c (potential_constant_expression_1): Handle un-folded
+	pointer to member constants.
+
 2014-08-26  Jason Merrill  <jason@redhat.com>
 
 	PR c++/58624
